Changed creation of containers Optimized working with data Code styling & refactoring

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+    <script defer src="scrip.js"></script>
     <title>Weather</title>
 </head>
 <body>
@@ -25,8 +25,30 @@
     </div>
 </div>
 
+<div class="error"></div>
+
 <div class="output-container">
-    <div class="output"></div>
+    <div class="output">
+        <!--  comment start   -->
+        <div class="city-info"></div>
+        <div class="observe-time"></div>
+
+        <div class="conditions-wrap">
+            <div>Temperature</div>
+            <div class="condition"></div>
+            <div>Feels like</div>
+            <div class="condition"></div>
+            <div>Pressure</div>
+            <div class="condition"></div>
+            <div>Humidity</div>
+            <div class="condition"></div>
+            <div>Wind</div>
+            <div class="condition"></div>
+            <div>Clouds</div>
+            <div class="condition"></div>
+        </div>
+        <!--  comment end  -->
+    </div>
 </div>
 
 </body>
