--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <script defer src="scrip.js"></script>
     <title>Weather</title>
+    <script defer src="MVC/weatherController.js" type="module"></script>
 </head>
 <body>
 <div class="search-container">
@@ -51,5 +51,6 @@
     </div>
 </div>
 
+<!--    <script src="MVC/weatherController.js" type="module"></script>-->
 </body>
 </html>
